Setup logging + add some timing logs.

--- a/package.yaml
+++ b/package.yaml
@@ -35,8 +35,9 @@ dependencies:
 - filepath
 - fuzzy
 - haskeline
-- io-memoize
 - Hclip
+- io-memoize
+- logging
 - mtl
 - optparse-applicative
 - pretty-diff
