Setup for unit-testing + tests for Cipher.

--- a/package.yaml
+++ b/package.yaml
@@ -93,7 +93,7 @@ executables:
 
 tests:
   stash-test:
-    main:                Spec.hs
+    main:                test.hs
     source-dirs:         test
     ghc-options:
     - -threaded
@@ -101,3 +101,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - stash
+    - quickcheck-instances
+    - tasty
+    - tasty-hunit
+    - tasty-quickcheck
