--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ description:         Please see the README on GitHub at <https://github.com/roro
 dependencies:
 - base >= 4.7 && < 5
 - aeson
+- aeson-pretty
 - ansi-wl-pprint
 - SHA
 - base64-bytestring
