Work around ghci warning.

--- a/package.yaml
+++ b/package.yaml
@@ -93,6 +93,9 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - stash
+    when:
+    - condition: false
+      other-modules: Paths_stash
 
 tests:
   stash-test:
