--- a/package.windows.yaml
+++ b/package.windows.yaml
@@ -82,17 +82,13 @@ default-extensions:
 executables:
   stash:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         app-windows
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - stash
-    - Hclip
-    - vty
-    - brick
-    - editor-open
     when:
     - condition: false
       other-modules: Paths_stash
