--- a/stack.yaml
+++ b/stack.yaml
@@ -45,12 +45,16 @@ extra-deps:
 - direct-sqlite-2.3.26
 - Hclip-3.0.0.4
 - pretty-diff-0.2.0.2
+- regex-posix-clib-2.7
 - sqlite-simple-0.4.18.0
 - tabl-1.0.3
 - random-strings-0.1.1.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
+flags:
+   regex-posix:
+      _regex-posix-clib: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
